syntax ="proto3";
option java_package="ma.enset.stubs";
service  BanqueService{
  rpc convert(ConvertCurencyRequest) returns(ConvertCurrencyResponse);//unary model
  rpc getCurrencyStream(ConvertCurencyRequest) returns(stream ConvertCurrencyResponse);//server stream model
  rpc performStream(stream ConvertCurencyRequest) returns(ConvertCurrencyResponse);//client streaming model
  rpc fullCurrencyStream(ConvertCurencyRequest) returns( stream ConvertCurrencyResponse);//Bidirectional streaming model



}
message ConvertCurencyRequest{
          string  currencyFrom=1;
          string  currencyTo=2;
          double  amount=3;

}
message ConvertCurrencyResponse{
  string  currencyFrom=1;
  string  currencyTo=2;
  double  amount=3;
  double result =4;
}